syntax = "proto3";
package transaction;
option go_package = "./proto";
import "google/protobuf/timestamp.proto";


message Transaction {
  int32 Id = 1;
	int32 CustomerId = 2;
	int32 ProductId = 3;
	int32 Price = 4;
	int32 Quantity = 5;
  google.protobuf.Timestamp CreatedAt = 6;
}

// GetTransactions
message TransactionsRequest {}

message TransactionsResponse {
  repeated Transaction Transactions = 1;
}

// GetTransaction
message GetTransactionRequest {
  int32 TransactionId = 1;
}

// CreateTransaction 
message CreateTransactionRequest {
  Transaction transaction = 1;
}

message CreateTransactionResponse {
  Transaction Transaction = 1;
}

service TransactionService {
  rpc GetTransactions (TransactionsRequest) returns (TransactionsResponse) {}
  rpc CreateTransaction (CreateTransactionRequest) returns (CreateTransactionResponse) {}
  rpc GetTransaction (GetTransactionRequest) returns (Transaction) {}
}